[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uct-python-utils"
version = "3.0.1"
description = "Utilidades de Python para la U"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Math" }
]
dependencies = [
    "rich"
]

[tool.setuptools]
packages = ["utils"]